# pantheon-coo

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railway.env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  Dockerfile.frontend  INSTALL.md  Makefile  OPERATOR_GUIDE.md  RAILWAY_DEPLOY.md  README.md  SECURITY.md  USER_GUIDE.md  VPS_DEPLOY.md  __main__.py  analytics.py  api_batch.py  billing.py  branding_runtime.py  config.py  docker-compose.yml  docker-start.sh  healthcheck.py  insights_engine.py  install.sh  logging_config.py  main.py  main_railway.py  models.py  monitor.py  notifications.py  orchestrator.py  pattern_detector.py  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
agents/: __init__.py  auto_fixer.py  base.py  brand_agent.py  briefing.py  call_agent.py  code_agent.py  confidence.py  decomposer.py  evaluator.py  executor.py  github_agent.py  memory_agent.py  model_router.py  planner.py  prompt_optimizer.py  reasoning.py  self_update_agent.py  suggester.py  tool_builder.py  trading_analyst.py  voice.py  website_generator.py
chrome_extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  styles.css
docker/: entrypoint.sh  nginx.conf
i18n/: __init__.py  translations.py
k8s/: README.md  deployment.yaml  hpa.yaml  service.yaml
memory/: __init__.py  db_pool.py  redis_client.py  semantic_store.py  store.py
migrations/: migrate.py
ml/: README.md  __init__.py  data_collector.py  training_config.py
mobile_app/: App.tsx  README.md  app.json  package.json
monitoring/: error_tracker.py  tracing.py
scripts/: load_test.py
security/: __init__.py  auth.py  rate_limit.py  sandbox.py  self_protector.py  user_auth.py
static/: admin_panel.html  dashboard.html  docs.html  landing.html  manifest.json  privacy.html  robots.txt  terms.html
taskqueue/: __init__.py  task_queue.py
tests/: conftest.py  test_admin_password_ui.py  test_agents.py  test_api.py  test_auth.py  test_billing.py  test_e2e.py  test_full_user_journey.py  test_landing_routes.py  test_migrations.py  test_performance_benchmark.py  test_security.py  test_security_hardening.py  test_self_update.py  test_stream_events.py  test_task23_medical.py  test_task24_sheets.py  test_task25_telegram.py  test_task26_analytics.py  test_task27_webhooks.py  test_task28_mobile.py  test_task29_suggestions.py  test_task30_performance.py  test_task31_voice.py  test_task32_trading.py  test_task33_website.py  test_task34_content.py  test_task35_finance.py  test_task36_cto.py  test_task37_brand.py  test_task38_phone.py  test_task39_database.py  test_task40_pdf.py  test_task41_image.py  test_task42_researcher.py  test_task43_security.py  test_task44_compliance.py  test_task45_deployer.py  test_task46_video.py  test_task47_postgres.py  (+46 more)
tools/: __init__.py  amazon_seller.py  (+37 more)
(+37 files in other folders)
