[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pantheon-coo"
version = "2.0.0"
description = "Pantheon COO OS — Autonomous AI Chief Operating Officer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Pantheon Meditech", email = "dev@pantheon.ai" }]
keywords = ["ai", "autonomous", "coo", "agent", "fastapi"]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "anthropic==0.26.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "openai==1.30.0",
    "playwright==1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pytest-timeout==2.3.1",
    "httpx==0.27.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
    "PyJWT==2.8.0",
]

[project.scripts]
pantheon-coo = "main:app"

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["tests"]
python_files    = ["test_*.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
addopts         = "--tb=short -q --timeout=30"
filterwarnings  = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ── ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
indent-width   = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (formatter handles it)
    "B008",  # function call in default arg (FastAPI Depends pattern)
    "UP007", # X | Y union (3.10+ only, keep 3.11 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "memory", "security", "tools"]

[tool.ruff.format]
quote-style    = "double"
indent-style   = "space"
docstring-code-format = true

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version  = "3.11"
strict          = false
ignore_missing_imports = true
warn_return_any = false
exclude         = ["tests/", "tools/custom/"]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["."]
omit     = ["tests/*", "tools/custom/*", "*/migrations/*"]
branch   = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass$",
]
show_missing = true
fail_under   = 70
